--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -19,8 +19,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Setup repo
-        uses: actions/checkout@v2
+      - name: Setup Deno
+        uses: denoland/setup-deno@v1.1.0
 
       - name: Setup Deno
         uses: denoland/setup-deno@v1
